# sps-genai-yoyo

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: bigram_model.py  cnn_model.py  cnn_train.py  main.py  rnn_model.py  rnn_train.py
helper_lib/: data_loader.py  evaluator.py  generator.py  main.py  model.py  trainer.py  usage.py  utils.py
